--- a/src/Components/Contato.module.css
+++ b/src/Components/Contato.module.css
@@ -42,6 +42,19 @@
   height: 64px;
 }
 
+.redes.enderecoRS h1,
+.redes.enderecoSP h1 {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+.redes h1::before {
+  content: '';
+  width: 14px;
+  height: 20px;
+  background: url('../Assets/icones/local.png') no-repeat center center;
+}
+
 /* Responsivo */
 @media (max-width: 1800px) {
   .content {
