--- a/src/Components/Forms/Input.module.css
+++ b/src/Components/Forms/Input.module.css
@@ -1,5 +1,6 @@
 .wrapper {
   margin-bottom: 1rem;
+  position: relative;
 }
 .input {
   border: 0.5px solid #464646;
@@ -9,7 +10,33 @@
   padding: 0.8rem;
   background: transparent;
   transition: 0.3s;
+  overflow: hidden;
+  box-sizing: border-box;
 }
+
+.wrapper::after {
+  position: absolute;
+  content: '';
+  right: -12px;
+  top: 27.5px;
+  width: 35px;
+  height: 20px;
+  rotate: 45deg;
+  border-bottom: 0.5px solid #464646;
+  background: #1e1e1e;
+  transition: 0.3s;
+}
+
+.wrapper:hover::after,
+.wrapper:focus::after {
+  outline: none;
+  right: -14px;
+  top: 25.5px;
+  border-color: transparent;
+  border-bottom: 0.5px solid #1e1e1e;
+  box-shadow: 0 0 0 2px #1e1e1e;
+}
+
 .input:focus,
 .input:hover {
   outline: none;
@@ -30,4 +57,3 @@
   font-size: 0.875rem;
   margin-top: 0.25rem;
 }
-
